--- a/.github/workflows/Invoke-AWS-VpcModule.yml
+++ b/.github/workflows/Invoke-AWS-VpcModule.yml
@@ -1,10 +1,10 @@
-# on:
-#   schedule:
-#     - cron:  '30 00 5 5 *'
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron:  '30 00 5 5 *'
+# on:
+#   push:
+#     branches:
+#       - master
       
 name: Terraform Apply
 
