--- a/.github/workflows/Invoke-AWS-VpcModule.yml
+++ b/.github/workflows/Invoke-AWS-VpcModule.yml
@@ -1,10 +1,10 @@
-on:
-  schedule:
-    - cron:  '10 12 14 7 *'
 # on:
-#   push:
-#     branches:
-#       - master
+#   schedule:
+#     - cron:  '15 12 14 7 *'
+on:
+  push:
+    branches:
+      - master
       
 name: Terraform Apply
 
